mongodb/mongo-express/ingressClass.yaml
# stolen from https://kubernetes.io/docs/concepts/services-networking/ingress/#default-ingress-class
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: mongodb-express-ingress-class
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
