mongodb/mongo-express/deployment.yaml
# to make this deployment available in an arbitrary namspace x execute
# kubectl apply -f ./deployment.yaml --namespace=x
# names are suffixed with their object type and super key
#   so `metadata.labels.app` has the value `mongodb-express-d-l`
#     where `d` stands for the object type deployment
#     and `l` the super key which is `label`
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-d
  labels:
    app: mongodb-express-d-l
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express-p-l
  template:
    metadata:
      labels:
        app: mongodb-express-p-l
    spec:
      containers: # containers defined here reside to one so called "pod", containers in a pod can contact each other by their names
      - name: mongodb-express-p
        image: mongo-express # https://hub.docker.com/_/mongo-express
        ports:
        - containerPort: 8081 # port exposed to other kubernetes "things" by the container based on the image mongodb-express
