mongodb/mongo-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-s
spec:
  selector:
    app: mongodb-express
  type: LoadBalancer # makes service accessible from outside of kubernetes
  ports:
  - protocol: TCP
    port: 8081 # port exposed by the service
    targetPort: 8081 # port exposed by pod to service
    nodePort: 30000 # where external IP Address will be opened, choosabele from 30000 to 32767
