mongodb/mongo-express/gateway.yaml
# https://kubernetes.io/docs/concepts/services-networking/gateway/

# a gateway in the request flow
#                                                                                             ┌───┐
#  ┌──────┐    http request    ┌───────┐         ┌─────────┐    routing rule    ┌───────┐ ┌──►│pod│
#  │client├───────────────────►│Gateway├────────►│HTTPRoute├───────────────────►│Service├─┤   └───┘
#  └──────┘                    └───────┘         └─────────┘                    └───────┘ │   ┌───┐
#                                                                                         └──►│pod│
#                                                                                             └───┘

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mongodb-express-gateway
spec:
  gatewayClassName: mongodb-express-gateway-class # references the gatewayClasses metadata.name
  listeners:
  - name: http
    protocol: HTTP
    port: 80
