mongodb/mongo-express/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#what-is-ingress
# https://kubernetes.io/docs/concepts/services-networking/ingress/#simple-fanout

# an ingress requires an ingress controller (which is a pod)
# on bare metal kubernetes installations there should/has to be a load balancer
# in between the the clients and the ingress controller
# e.g. a proxy server forwarding requests to the ingress controller
# in minikube you can use the command `minikube addons enable ingress` 
# for bare metal load balancers magaed inside the kubernetes cluster head for https://metallb.universe.tf/concepts/
#               ┌──cluster────────────────────────────────────────────────────────────────────────┐
#               │                                                                       ┌────┐    │
#     ┌──────┐  │    ┌──────────────────┐                      ┌───────┐           ┌───►│pod │    │
#     │client├──│───►│ingress-controller┼─────────────────────►│Service├───────────┤    └────┘    │
#     └──────┘  │    └────┬─────────────┘                      └───────┘           │    ┌────┐    │
#               │         │                                                        └───►│pod │    │
#               │      ┌──┴────┐                                                        └────┘    │
#               │      │ingress│                                                                  │
#               │      └───────┘                                                                  │
#               └─────────────────────────────────────────────────────────────────────────────────┘
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-express-ingress
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx # requires running `minikube addons enable ingress`
  rules:
  - host: a.b # add the line `xxx.xxx.xxx.xxx a.b` to your /etc/hosts file where xxx.xxx.xxx.xxx is
              # the result of the command `minikube ip`
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: # sub directory name so e.g. myapp.com/backend/ would be what you would enter into the browser
          service:
            name: mongodb-express-s # refers to metadata.name of an internal service
            port:
              number: 8081 # refers to spec.ports.port of the selected service
